create balance page. added new block-sections: reference ,cost-service and promo.

--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -31,7 +31,7 @@
   --color-gray-200: #ece4e4;
   --color-gray-100: #f3eded;
   --color-gray-90: #dcdcdc;
-  // --color-gray-75: #f8efef;
+  --color-gray-75: #f8efef;
   --color-gray-50: #fbf8f8;
 
   --color-grad-1: linear-gradient(
