--- a/styles/blocks/promo/promo-tire-fitting-page.css
+++ b/styles/blocks/promo/promo-tire-fitting-page.css
@@ -1,4 +1,4 @@
-/* Section promo. Styles for main page */
+/* Section promo. Styles for tire-fitting page */
 .promo {
   position: relative;
   min-height: 37.5rem;
@@ -199,8 +199,8 @@
     max-width: 20rem;
   }
 }
-/*  ===================================  */
-/*  =====END promo block(home page)====  */
-/*  ===================================  */
+/*  ======================================  */
+/*  =====END promo block(tire-fitting)====  */
+/*  ======================================  */
 
 /*# sourceMappingURL=promo-tire-fitting-page.css.map */
