--- a/styles/blocks/promo/promo-tire-fitting-page.scss
+++ b/styles/blocks/promo/promo-tire-fitting-page.scss
@@ -1,5 +1,5 @@
 @use "../../healpers" as *;
-/* Section promo. Styles for main page */
+/* Section promo. Styles for tire-fitting page */
 .promo {
   position: relative;
   min-height: rem(600);
@@ -247,6 +247,6 @@
     }
   }
 }
-/*  ===================================  */
-/*  =====END promo block(home page)====  */
-/*  ===================================  */
+/*  ======================================  */
+/*  =====END promo block(tire-fitting)====  */
+/*  ======================================  */
