--- a/styles/blocks/service-situation/_service-situation.scss
+++ b/styles/blocks/service-situation/_service-situation.scss
@@ -5,12 +5,6 @@
   margin-inline: auto;
   padding-inline: var(--container-padding-x);
 
-  &__title {
-    text-align: center;
-    margin-bottom: rem(50);
-    line-height: 1.2;
-  }
-
   &__icon {
     @include square(rem(38));
   }
@@ -20,8 +14,8 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto auto;
 
-    gap: rem(24);
-    margin-bottom: rem(50);
+    gap: fluid(24, 10);
+    margin-bottom: fluid(50, 20);
 
     &-item {
       @include flex-center;
@@ -71,7 +65,6 @@
   .service-situation {
     &__list {
       grid-template-columns: 1fr;
-      gap: rem(24);
 
       &-item {
         max-width: rem(404);
