--- a/styles/pages/tire-fitting-page/tire-fitting.css
+++ b/styles/pages/tire-fitting-page/tire-fitting.css
@@ -165,6 +165,7 @@ svg * {
   --color-gray-200: #ece4e4;
   --color-gray-100: #f3eded;
   --color-gray-90: #dcdcdc;
+  --color-gray-75: #f8efef;
   --color-gray-50: #fbf8f8;
   --color-grad-1: linear-gradient(
     180deg,
@@ -488,6 +489,8 @@ button[aria-label]::before {
   border-radius: var(--border-radius);
   min-height: var(--button-height);
   padding: 0.5625rem 1.25rem;
+  transition-duration: var(--transition-duration) !important;
+  will-change: transform;
 }
 @media (any-hover: hover) {
   .button:hover {
@@ -501,7 +504,6 @@ button[aria-label]::before {
 }
 .button:active {
   filter: brightness(90%);
-  will-change: transform;
   scale: 0.97;
 }
 .button--light-bg-color {
@@ -983,6 +985,15 @@ button[aria-label]::before {
   .page-heading__breadcrumbs {
     margin-bottom: 0.625rem;
   }
+  .page-heading__breadcrumbs-item {
+    padding-inline: 0.625rem;
+  }
+  .page-heading__breadcrumbs-item:first-child {
+    padding-inline: 0 0.625rem;
+  }
+  .page-heading__breadcrumbs-item:last-child {
+    padding-inline: 0.625rem 0;
+  }
   .page-heading__breadcrumbs-link {
     line-height: 1.4;
     letter-spacing: 0.03em;
@@ -991,7 +1002,7 @@ button[aria-label]::before {
 /*  ===================================  */
 /*  ==========END page-heading=========  */
 /*  ===================================  */
-/* Section promo. Styles for main page */
+/* Section promo. Styles for tire-fitting page */
 .promo {
   position: relative;
   min-height: 37.5rem;
@@ -1192,9 +1203,9 @@ button[aria-label]::before {
     max-width: 20rem;
   }
 }
-/*  ===================================  */
-/*  =====END promo block(home page)====  */
-/*  ===================================  */
+/*  ======================================  */
+/*  =====END promo block(tire-fitting)====  */
+/*  ======================================  */
 /* Search block. ( form + input + button) .part of block locations */
 .search {
   --searchBlockHeight: 2.375rem;
@@ -2189,11 +2200,6 @@ button[aria-label]::before {
   margin-inline: auto;
   padding-inline: var(--container-padding-x);
 }
-.service-situation__title {
-  text-align: center;
-  margin-bottom: 3.125rem;
-  line-height: 1.2;
-}
 .service-situation__icon {
   width: 2.375rem;
   height: 2.375rem;
@@ -2202,8 +2208,8 @@ button[aria-label]::before {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto auto;
-  gap: 1.5rem;
-  margin-bottom: 3.125rem;
+  gap: clamp(0.625rem, 0.2180232558rem + 1.6279069767vw, 1.5rem);
+  margin-bottom: clamp(1.25rem, 0.3779069767rem + 3.488372093vw, 3.125rem);
 }
 .service-situation__list-item {
   display: flex;
@@ -2244,7 +2250,6 @@ button[aria-label]::before {
 @media (width <= 35.93625rem) {
   .service-situation__list {
     grid-template-columns: 1fr;
-    gap: 1.5rem;
   }
   .service-situation__list-item {
     max-width: 25.25rem;
@@ -2276,12 +2281,11 @@ button[aria-label]::before {
 }
 .when-work__subtitle {
   line-height: 1.5;
-  letter-spacing: var(--letter-spacing-medium);
   color: var(--text-color-dark-secondary);
 }
 .when-work__buttons {
   display: flex;
-  gap: 1.5rem;
+  gap: 1.25rem;
 }
 .when-work__button {
   font-size: clamp(0.9375rem, 0.9084302326rem + 0.1162790698vw, 1rem);
@@ -2384,10 +2388,14 @@ button[aria-label]::before {
 .services-list__link {
   position: relative;
   display: inline-block;
+  width: 100%;
   font-weight: 700;
   font-size: 0.9375rem;
   line-height: 1.1;
   text-transform: uppercase;
+  transition-duration: var(--transition-duration) !important;
+  will-change: transform;
+  padding-inline: 0 1.625rem;
 }
 .services-list__link::before {
   width: 0.5rem;
@@ -2395,8 +2403,8 @@ button[aria-label]::before {
   content: "";
   position: absolute;
   left: -1.25rem;
-  top: 50%;
-  translate: 0 -50%;
+  top: 45%;
+  translate: 0 -45%;
   background-color: var(--text-color-medium);
   border-radius: 50%;
 }
