create tire-repair page. added section services-direction. update sections: promo ,cost-service ,reference.

--- a/styles/blocks/cost-service/_service-cost-card.scss
+++ b/styles/blocks/cost-service/_service-cost-card.scss
@@ -16,11 +16,13 @@
   }
 
   &__text {
-    font-size: rem(18);
     line-height: 1.47;
     text-align: center;
     color: var(--color);
 
+    &--static-fs {
+      font-size: rem(18);
+    }
     &-big {
       @include fluid-text(20, 17);
 
