--- a/styles/blocks/reference/reference.scss
+++ b/styles/blocks/reference/reference.scss
@@ -15,7 +15,10 @@
     max-width: rem(832);
     font-size: rem(18);
     line-height: 1.5;
-    font-weight: 600;
+
+    &--semi-bold {
+      font-weight: 600;
+    }
 
     p:not(:last-child) {
       margin-bottom: rem(16);
