--- a/styles/blocks/services-list/services-list.scss
+++ b/styles/blocks/services-list/services-list.scss
@@ -25,7 +25,7 @@
 
     min-height: rem(50);
     flex-shrink: 0;
-    padding-inline: rem(38) rem(26);
+    padding-inline: rem(38) 0;
   }
 
   &__link {
@@ -72,7 +72,7 @@
     &__nav {
       &-list {
         flex-direction: column;
-        padding-inline: rem(32) rem(26);
+        padding-inline: rem(32) 0;
       }
     }
 
