--- a/styles/pages/balancing-page/balancing.css
+++ b/styles/pages/balancing-page/balancing.css
@@ -1205,12 +1205,25 @@ button[aria-label]::before {
   max-width: 52rem;
   font-size: 1.125rem;
   line-height: 1.5;
+}
+.reference__text--semi-bold {
   font-weight: 600;
+}
+.reference__text--small-text-mobile {
+  font-size: clamp(1rem, 0.9418604651rem + 0.2325581395vw, 1.125rem);
 }
 .reference__text p:not(:last-child) {
   margin-bottom: 1rem;
 }
 
+@media (width <= 47.99875rem) {
+  .reference--padding-mobile {
+    padding-block: 1.25rem;
+  }
+  .reference__text p:not(:last-child) {
+    margin-bottom: 0;
+  }
+}
 @media (width <= 35.93625rem) {
   .reference {
     flex-direction: column;
@@ -1291,10 +1304,12 @@ button[aria-label]::before {
   background-color: var(--color-gray-75);
 }
 .service-cost-card__text {
-  font-size: 1.125rem;
   line-height: 1.47;
   text-align: center;
   color: var(--color);
+}
+.service-cost-card__text--static-fs {
+  font-size: 1.125rem;
 }
 .service-cost-card__text-big {
   font-size: clamp(1.0625rem, 0.9752906977rem + 0.3488372093vw, 1.25rem);
@@ -1703,7 +1718,7 @@ button[aria-label]::before {
   align-items: center;
   min-height: 3.125rem;
   flex-shrink: 0;
-  padding-inline: 2.375rem 1.625rem;
+  padding-inline: 2.375rem 0;
 }
 .services-list__link {
   position: relative;
@@ -1744,7 +1759,7 @@ button[aria-label]::before {
   }
   .services-list__nav-list {
     flex-direction: column;
-    padding-inline: 2rem 1.625rem;
+    padding-inline: 2rem 0;
   }
   .services-list__item {
     position: relative;
