create tire-storage page. added section about-servicen. update sections: promo ,cost-service ,reference, advabtages

--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -46,12 +46,25 @@
   );
 
   --color-grad-2: linear-gradient(90deg, #44362e75 35.45%, #beb19f12 78.09%);
+
+  --color-grad-3: linear-gradient(
+    180deg,
+    #27211e 0%,
+    #24272c 25.96%,
+    #1a1c1e 49.04%,
+    #19191c 66.66%,
+    #321d17 80.64%,
+    #19171a 89.34%,
+    #111215 100%
+  );
+
   --color-white-opacity-10: #ffffff34;
   --color-white-opacity-35: #ffffffa8;
+  --color-black-opacity-48: #3332327a;
+  --color-black-opacity-80: #00000033;
   // --color-white-opacity-90: #ffffffe6;
   // --color-white-opacity: #ffffff8d;
   // --color-black-opacity: #00000066;
-  --color-black-opacity-80: #00000033;
   // --color-black-opacity-60: #00000066;
   // --color-black-opacity-40: #00000099;
   --color-red: #ba1414;
@@ -62,6 +75,7 @@
   --color-blue: #2c94ea;
   --color-blue-light: #2cabea;
   --color-gold: #f8981c;
+  --color-orange: #f97b06;
   // ================ //
   --color-light: #ffffff;
   --color-dark: #000000;
