--- a/styles/blocks/page-heading/page-heading.css
+++ b/styles/blocks/page-heading/page-heading.css
@@ -2,7 +2,7 @@
 /* Section page-heading */
 .page-heading {
   --breadcrumbsColor: var(--color-gray-500);
-  --breadcrumbsGap: clamp(1.75rem, 1.1104651163rem + 2.5581395349vw, 3.125rem);
+  --breadcrumbsGap: clamp(3rem, 2.9418604651rem + 0.2325581395vw, 3.125rem);
   padding-block: 1.5rem 2.9375rem;
   color: var(--breadcrumbsColor);
 }
@@ -21,7 +21,7 @@
   position: absolute;
   content: "−";
   right: calc(var(--breadcrumbsGap) / 2 * -1 - 0.3125rem);
-  top: 0.06em;
+  top: 10%;
 }
 .page-heading__breadcrumbs-item:last-child a {
   opacity: 0.7;
@@ -47,9 +47,19 @@
   .page-heading__breadcrumbs {
     margin-bottom: 0.625rem;
   }
+  .page-heading__breadcrumbs-item:not(:last-child)::after {
+    top: 5%;
+  }
   .page-heading__breadcrumbs-link {
     line-height: 1.4;
     letter-spacing: 0.03em;
+  }
+}
+@media (width <= 47.99875rem) {
+  .page-heading__breadcrumbs-list {
+    flex-wrap: wrap;
+    column-gap: var(--breadcrumbsGap);
+    row-gap: 0.9375rem;
   }
 }
 /*  ===================================  */
