--- a/styles/blocks/сommon-blocks/_section.scss
+++ b/styles/blocks/сommon-blocks/_section.scss
@@ -29,6 +29,10 @@
     margin-block: 0 fluid(50, 20);
     text-align: center;
     line-height: 1.2;
+
+    &--static-margin {
+      margin-block: 0 rem(50) !important;
+    }
   }
 
   &__subtitle {
