--- a/styles/blocks/сommon-blocks/_section.scss
+++ b/styles/blocks/сommon-blocks/_section.scss
@@ -12,6 +12,9 @@
   &--static-margin {
     margin-bottom: var(--section-margin-y-static);
   }
+  &--static-medium-margin {
+    margin-bottom: var(--section-margin-y-medium-static);
+  }
   &--margin-to-medium {
     margin-bottom: var(--section-margin-y-to-medium);
   }
