--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -120,6 +120,7 @@
 
   --section-margin-y: #{fluid(80, 40)};
   --section-margin-y-static: #{rem(80)};
+  --section-margin-y-medium-static: #{rem(60)};
   --section-margin-y-to-medium: #{fluid(80, 60)};
   --section-margin-y-extra-big: #{fluid(130, 80)};
   --section-margin-y-big: #{fluid(120, 80)};
