--- a/styles/blocks/about/_about-service-list.scss
+++ b/styles/blocks/about/_about-service-list.scss
@@ -6,7 +6,6 @@
   &__item {
     display: flex;
     align-items: center;
-    min-height: rem(111);
     gap: rem(24);
     padding: rem(20);
 
@@ -17,7 +16,7 @@
         &::after {
           content: "";
           position: absolute;
-          top: 100%;
+          top: calc(100% + rem(10));
           left: 50%;
           width: rem(1);
           height: rem(40);
@@ -35,6 +34,8 @@
 
   &__icon {
     &-wrapper {
+      @include square(rem(32));
+
       flex-shrink: 0;
       position: relative;
     }
@@ -44,7 +45,10 @@
     font-size: rem(15);
     line-height: 1.1;
     text-transform: uppercase;
-    margin-bottom: rem(10);
+
+    &:not(:last-child) {
+      margin-bottom: rem(10);
+    }
   }
 
   &__text {
