--- a/styles/pages/tire-storage-page/tire-storage.css
+++ b/styles/pages/tire-storage-page/tire-storage.css
@@ -234,6 +234,7 @@ svg * {
   --container-padding-x: 1.25rem;
   --section-margin-y: clamp(2.5rem, 1.3372093023rem + 4.6511627907vw, 5rem);
   --section-margin-y-static: 5rem;
+  --section-margin-y-medium-static: 3.75rem;
   --section-margin-y-to-medium: clamp(3.75rem, 3.1686046512rem + 2.3255813953vw, 5rem);
   --section-margin-y-extra-big: clamp(5rem, 3.5465116279rem + 5.8139534884vw, 8.125rem);
   --section-margin-y-big: clamp(5rem, 3.8372093023rem + 4.6511627907vw, 7.5rem);
@@ -615,6 +616,9 @@ button[aria-label]::before {
 }
 .section--static-margin {
   margin-bottom: var(--section-margin-y-static);
+}
+.section--static-medium-margin {
+  margin-bottom: var(--section-margin-y-medium-static);
 }
 .section--margin-to-medium {
   margin-bottom: var(--section-margin-y-to-medium);
@@ -1367,7 +1371,8 @@ button[aria-label]::before {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1.25rem;
+  justify-content: center;
+  gap: 1.0625rem;
   height: 100%;
   outline: var(--border-light);
   border-radius: var(--border-radius-small);
@@ -1376,18 +1381,36 @@ button[aria-label]::before {
 .service-cost-card--accent-bg {
   background-color: var(--color-gray-75);
 }
+.service-cost-card--big-padding {
+  padding-block: 3.125rem;
+  gap: 0.625rem;
+}
 .service-cost-card__text {
   line-height: 1.47;
   text-align: center;
-  color: var(--color);
+  color: var(--text-color-dark-secondary);
 }
 .service-cost-card__text--static-fs {
   font-size: 1.125rem;
+}
+.service-cost-card__text--semi-bold {
+  font-weight: 600;
+  color: var(--text-color-dark);
+}
+.service-cost-card__text--width-300 {
+  max-width: 18.75rem;
 }
 .service-cost-card__text-big {
   font-size: clamp(1.0625rem, 0.9752906977rem + 0.3488372093vw, 1.25rem);
   font-weight: 700;
   line-height: 1.3;
+  text-transform: uppercase;
+  text-align: center;
+}
+.service-cost-card__text-extra-big {
+  font-size: 4rem;
+  font-weight: 700;
+  line-height: 1.1;
   text-transform: uppercase;
   text-align: center;
 }
@@ -1404,6 +1427,9 @@ button[aria-label]::before {
 @media (width <= 47.99875rem) {
   .service-cost-card__text-big {
     line-height: 1.2;
+  }
+  .service-cost-card__text-extra-big {
+    color: var(--color-accent-600);
   }
   .service-cost-card__text:has(.service-cost-card__asside-tag) {
     flex-direction: column;
@@ -1456,7 +1482,6 @@ button[aria-label]::before {
 .about-service-list__item {
   display: flex;
   align-items: center;
-  min-height: 6.9375rem;
   gap: 1.5rem;
   padding: 1.25rem;
 }
@@ -1466,7 +1491,7 @@ button[aria-label]::before {
 .about-service-list__item:not(:last-child) .about-service-list__icon-wrapper::after {
   content: "";
   position: absolute;
-  top: 100%;
+  top: calc(100% + 0.625rem);
   left: 50%;
   width: 0.0625rem;
   height: 2.5rem;
@@ -1476,6 +1501,8 @@ button[aria-label]::before {
   height: 5rem;
 }
 .about-service-list__icon-wrapper {
+  width: 2rem;
+  height: 2rem;
   flex-shrink: 0;
   position: relative;
 }
@@ -1483,6 +1510,8 @@ button[aria-label]::before {
   font-size: 0.9375rem;
   line-height: 1.1;
   text-transform: uppercase;
+}
+.about-service-list__heading:not(:last-child) {
   margin-bottom: 0.625rem;
 }
 .about-service-list__text {
@@ -1495,7 +1524,7 @@ button[aria-label]::before {
     max-width: unset;
   }
 }
-/* Section about-service. */
+/* Section about-service. Page tire-storage */
 .about-service__body {
   display: flex;
   justify-content: space-between;
