create disk-painting  page. update sections: promo ,cost-service, services-direction , page-background-block, aout-service , service-advantages

--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -68,6 +68,7 @@
   // --color-black-opacity-60: #00000066;
   // --color-black-opacity-40: #00000099;
   --color-red: #ba1414;
+  --color-red-opcity-15: rgba(59, 6, 5, 0.15);
   --color-red-opcity-40: #3b060566;
   --color-green: #139128;
   --color-green-light: #31ba49;
