--- a/styles/blocks/cost-service/cost-service-tire-fitting-page.css
+++ b/styles/blocks/cost-service/cost-service-tire-fitting-page.css
@@ -186,7 +186,7 @@
 }
 /* =============================== */
 /* =============================== */
-/* Styles for block-tabs services-tabs. Part of section cort-service. source tire-fitting-page */
+/* Styles for block-tabs services-tabs. Part of section cost-service. source tire-fitting-page */
 .services-tabs {
   --serviceTabsButtonBg: var(--color-accent-extra-light);
   --serviceTabsActiveButtonBg: var(--color-gray-800);
