--- a/styles/blocks/cost-service/_services-tabs.scss
+++ b/styles/blocks/cost-service/_services-tabs.scss
@@ -1,5 +1,5 @@
 @use "../../healpers" as *;
-/* Styles for block-tabs services-tabs. Part of section cort-service. source tire-fitting-page */
+/* Styles for block-tabs services-tabs. Part of section cost-service. source tire-fitting-page */
 
 .services-tabs {
   --serviceTabsButtonBg: var(--color-accent-extra-light);
