--- a/styles/blocks/page-background-block/page-background-block.scss
+++ b/styles/blocks/page-background-block/page-background-block.scss
@@ -3,6 +3,20 @@
 .page-background-block {
   height: rem(250);
 
+  &--blockout-15 {
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: var(--color-red-opcity-15);
+    }
+  }
+
   &__image {
     width: 100%;
     height: 100%;
