--- a/styles/pages/tire-fitting-page/tire-fitting.css
+++ b/styles/pages/tire-fitting-page/tire-fitting.css
@@ -193,6 +193,7 @@ svg * {
   --color-black-opacity-48: #3332327a;
   --color-black-opacity-80: #00000033;
   --color-red: #ba1414;
+  --color-red-opcity-15: rgba(59, 6, 5, 0.15);
   --color-red-opcity-40: #3b060566;
   --color-green: #139128;
   --color-green-light: #31ba49;
@@ -1697,7 +1698,7 @@ button[aria-label]::before {
 }
 /* =============================== */
 /* =============================== */
-/* Styles for block-tabs services-tabs. Part of section cort-service. source tire-fitting-page */
+/* Styles for block-tabs services-tabs. Part of section cost-service. source tire-fitting-page */
 .services-tabs {
   --serviceTabsButtonBg: var(--color-accent-extra-light);
   --serviceTabsActiveButtonBg: var(--color-gray-800);
