--- a/styles/pages/tire-studding-page/tire-studding.css
+++ b/styles/pages/tire-studding-page/tire-studding.css
@@ -193,6 +193,7 @@ svg * {
   --color-black-opacity-48: #3332327a;
   --color-black-opacity-80: #00000033;
   --color-red: #ba1414;
+  --color-red-opcity-15: rgba(59, 6, 5, 0.15);
   --color-red-opcity-40: #3b060566;
   --color-green: #139128;
   --color-green-light: #31ba49;
@@ -1401,18 +1402,30 @@ button[aria-label]::before {
 /*  ====================================  */
 /*  =====END block-section reference====  */
 /*  ====================================  */
-/* Styles for page-backgroud-block */
-.page-backgroud-block {
+/* Styles for page-background-block */
+.page-background-block {
   height: 15.625rem;
 }
-.page-backgroud-block__image {
+.page-background-block--blockout-15 {
+  position: relative;
+}
+.page-background-block--blockout-15::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: var(--color-red-opcity-15);
+}
+.page-background-block__image {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
 /*  =================================  */
-/*  =====END page-backgroud-block====  */
+/*  =====END page-background-block====  */
 /*  =================================  */
 /* Block about-service-list. part of section about-service */
 .about-service-list {
