--- a/styles/pages/services-page/services.css
+++ b/styles/pages/services-page/services.css
@@ -193,7 +193,7 @@ svg * {
   --color-black-opacity-48: #3332327a;
   --color-black-opacity-80: #00000033;
   --color-red: #ba1414;
-  --color-red-opcity-15: rgba(59, 6, 5, 0.15);
+  --color-red-opcity-15: #3b060526;
   --color-red-opcity-40: #3b060566;
   --color-green: #139128;
   --color-green-light: #31ba49;
@@ -1459,6 +1459,9 @@ button[aria-label]::before {
   outline: var(--border-light);
   padding-inline: 6.25rem 0;
   border-radius: var(--border-radius-small);
+}
+.when-work__wrapper--desktop-padding {
+  padding-block: clamp(0rem, -0.5087209302rem + 2.0348837209vw, 1.09375rem);
 }
 .when-work__body {
   display: flex;
