--- a/styles/blocks/cost-service/cost-service.scss
+++ b/styles/blocks/cost-service/cost-service.scss
@@ -1,6 +1,7 @@
 @use "../../healpers" as *;
 @use "../сommon-blocks/auth-portal";
 @use "service-cost-card";
+@use "cost-service-addresses";
 /* Section cost-service. */
 .cost-service {
   &__banner {
@@ -17,6 +18,15 @@
     &--static-margin {
       margin-bottom: rem(50);
     }
+
+    &--three-col {
+      grid-template-columns: repeat(3, 1fr);
+      gap: fluid(24, 8.5);
+    }
+  }
+
+  &__addresses {
+    margin-bottom: rem(50);
   }
 
   &__buttons {
@@ -29,10 +39,29 @@
     font-size: rem(16);
   }
 }
+@include laptop-media {
+  .cost-service {
+    &__list {
+      &--three-col {
+        grid-template-columns: repeat(2, 1fr);
+
+        li:last-child {
+          grid-column: 1/3;
+        }
+      }
+    }
+  }
+}
 @include mobile-media {
   .cost-service {
     &__list {
       grid-template-columns: 1fr;
+
+      &--three-col {
+        li:last-child {
+          grid-column: 1;
+        }
+      }
     }
   }
 }
