--- a/styles/pages/tire-storage-page/tire-storage.css
+++ b/styles/pages/tire-storage-page/tire-storage.css
@@ -193,7 +193,7 @@ svg * {
   --color-black-opacity-48: #3332327a;
   --color-black-opacity-80: #00000033;
   --color-red: #ba1414;
-  --color-red-opcity-15: rgba(59, 6, 5, 0.15);
+  --color-red-opcity-15: #3b060526;
   --color-red-opcity-40: #3b060566;
   --color-green: #139128;
   --color-green-light: #31ba49;
@@ -1386,6 +1386,11 @@ button[aria-label]::before {
   padding-block: 3.125rem;
   gap: 0.625rem;
 }
+.service-cost-card--medium-padding {
+  padding-block: 1.25rem;
+  gap: 1.5rem;
+  justify-content: start;
+}
 .service-cost-card__text {
   line-height: 1.47;
   text-align: center;
@@ -1424,6 +1429,13 @@ button[aria-label]::before {
 .service-cost-card__text:has(.service-cost-card__asside-tag) .service-cost-card__asside-tag {
   min-width: 6.25rem;
 }
+.service-cost-card:has(.service-cost-card__list) .service-cost-card__list {
+  line-height: 1.5;
+}
+.service-cost-card:has(.service-cost-card__list) .service-cost-card__list:has(:nth-child(2)) {
+  list-style-type: disc;
+  padding-left: 1.6875rem;
+}
 
 @media (width <= 47.99875rem) {
   .service-cost-card__text-big {
@@ -1436,6 +1448,34 @@ button[aria-label]::before {
     flex-direction: column;
     align-items: center;
     text-align: center;
+  }
+}
+/* Styles for block-section cost-service-addresses. Part of section cost-service. */
+.cost-service-addresses {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: clamp(1.25rem, 0.9593023256rem + 1.1627906977vw, 1.875rem);
+}
+.cost-service-addresses__body {
+  display: flex;
+  flex-direction: column;
+  gap: 1.3125rem;
+}
+.cost-service-addresses__text {
+  font-weight: 700;
+  font-size: 1.125rem;
+  line-height: 1.3;
+  text-transform: uppercase;
+}
+.cost-service-addresses__list {
+  list-style-type: disc;
+  padding-left: 1.6875rem;
+}
+@media (width <= 47.99875rem) {
+  .cost-service-addresses {
+    flex-direction: column;
+    padding-block: 1.25rem;
   }
 }
 /* Section cost-service. */
@@ -1452,6 +1492,13 @@ button[aria-label]::before {
 .cost-service__list--static-margin {
   margin-bottom: 3.125rem;
 }
+.cost-service__list--three-col {
+  grid-template-columns: repeat(3, 1fr);
+  gap: clamp(0.53125rem, 0.0806686047rem + 1.8023255814vw, 1.5rem);
+}
+.cost-service__addresses {
+  margin-bottom: 3.125rem;
+}
 .cost-service__buttons {
   display: flex;
   justify-content: center;
@@ -1462,9 +1509,20 @@ button[aria-label]::before {
   font-size: 1rem;
 }
 
+@media (width <= 81.31125rem) {
+  .cost-service__list--three-col {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .cost-service__list--three-col li:last-child {
+    grid-column: 1/3;
+  }
+}
 @media (width <= 47.99875rem) {
   .cost-service__list {
     grid-template-columns: 1fr;
+  }
+  .cost-service__list--three-col li:last-child {
+    grid-column: 1;
   }
 }
 @media (width <= 35.93625rem) {
@@ -1585,6 +1643,9 @@ button[aria-label]::before {
   outline: var(--border-light);
   padding-inline: 6.25rem 0;
   border-radius: var(--border-radius-small);
+}
+.when-work__wrapper--desktop-padding {
+  padding-block: clamp(0rem, -0.5087209302rem + 2.0348837209vw, 1.09375rem);
 }
 .when-work__body {
   display: flex;
